updated picture class fixed errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,13 @@ elseif(APPLE)
 endif()
 
 add_subdirectory(glfw)
+add_subdirectory(glad)
+add_subdirectory(stbi)
 add_subdirectory(Dwarf)
 add_subdirectory(Game_JL)
 
 set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT Game_JL)
+
+file(COPY Assets Destination ${PROJECT_BINARY_DIR})
+file(COPY Assets Destination ${PROJECT_BINARY_DIR}/Debug)
+file(COPY Assets Destination ${PROJECT_BINARY_DIR}/Release)
