--- a/Dwarf/CMakeLists.txt
+++ b/Dwarf/CMakeLists.txt
@@ -1,14 +1,33 @@
 set(HEADER_FILES
 	include/Dwarf.h
 	DwarfApp.h
+	Events.h
 	Utilities.h
 	GameWindow.h
 	WindowImplementation.h
 	GLFWCode/GLFWImplementation.h
+	GLFWCode/OpenGLPicture.h
+	GLFWCode/OpenGLRenderer.h
+	GLFWCode/OpenGLShader.h
+	Picture.h
+	PictureImplementation.h
+	Renderer.h
+	RendererImplementation.h
+	Shader.h
+	ShaderImplementation.h
+	Unit.h
 )
 set(SOURCE_FILES
+	Events.cpp
 	GameWindow.cpp
 	GLFWCode/GLFWImplementation.cpp
+	GLFWCode/OpenGLPicture.cpp
+	GLFWCode/OpenGLRenderer.cpp
+	GLFWCode/OpenGLShader.cpp
+	Picture.cpp
+	Renderer.cpp
+	Shader.cpp
+	Unit.cpp
 )
 
 add_definitions(-DDC_DEBUG=2)
@@ -16,9 +35,13 @@ add_definitions(-DDWARF_LIB)
 
 include_directories(../Dwarf)
 include_directories(../glfw/include)
+include_directories(../glad/include)
+include_directories(../stbi)
 
 add_library(Dwarf SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
 target_precompile_headers(Dwarf PRIVATE pch.h)
 
 target_link_libraries(Dwarf glfw)
+target_link_libraries(Dwarf glad)
+target_link_libraries(Dwarf stbi)
