--- a/Dwarf/Dwarf.vcxproj.filters
+++ b/Dwarf/Dwarf.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClInclude Include="RendererImplementation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GLFWCode\OpenGLRenderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Events.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -70,6 +67,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Unit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OpenGLRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
