--- a/Game_JL/CMakeLists.txt
+++ b/Game_JL/CMakeLists.txt
@@ -1,6 +1,12 @@
 set(HEADER_FILES
+	Ball.h
+	Bomb.h
+	MyGame.h
 )
 set(SOURCE_FILES
+	Ball.cpp
+	Bomb.cpp
+	MyGame.cpp
 	main.cpp
 )
 add_executable(Game_JL ${HEADER_FILES} ${SOURCE_FILES})
