--- a/Game_JL/Game_JL.vcxproj
+++ b/Game_JL/Game_JL.vcxproj
@@ -131,7 +131,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyGame.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dwarf\Dwarf.vcxproj">
@@ -146,6 +149,11 @@
     <ProjectReference Include="..\stbi\stbi.vcxproj">
       <Project>{b8f9ff90-39f6-424b-9f11-5c802b8b5371}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ball.h" />
+    <ClInclude Include="Bomb.h" />
+    <ClInclude Include="MyGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
